[package]
name = "libjuice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
lazy_static = "1.4"
libjuice-sys = { path = "libjuice-sys", version = "0.1.0" }

[dev-dependencies]
env_logger = "0.9"