[package]
name = "libjuice-rs"
version = "0.1.0"
description = "Rust bindings for libjuice"
edition = "2021"
license = "LGPL-2.1"
readme = "README.md"
homepage = "https://github.com/VollmondT/juice-rs"
authors = ["Vyacheslav S. Troshin"]
keywords = [
    "udp", "stun", "nat-traversal", "p2p", "ice"
]
categories = ["network-programming"]

[dependencies]
log = "0.4"
lazy_static = "1.4"
libjuice-sys = { path = "libjuice-sys", version = "0.9" }

[dev-dependencies]
env_logger = "0.9"
